@@ -1,3 +1,9 @@
+2008-03-22  Colin Walters  <walters@verbum.org>
+
+	* MAINTAINERS: New file.
+	* src/krb5-auth-dialog.c: Connect to session bus
+	to be sure we exit when the session dies.
+
 2006-10-29  Christopher Aillon  <caillon@redhat.com>
 
 	* src/krb5-auth-dialog.c: Clean up the #ifdefs to
